2004-12-19  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Temporarily commented out check for forwarding host 
	presence.

	* src/sipendpoint.cpp: More work on OnIncomingConnection. Call
	forward on busy, and call forward always should work now.

2004-12-19  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/endpoint.h, src/h323endpoint.cpp, 
	src/h323endpoint.h, src/sipendpoint.cpp, src/sipendpoint.h:
	Moved OnIncomingConnection to the SIP and H.323 endpoints to allow
	call forwarding. Will only work with the latest patch on OPAL.

2004-12-15  Damien Sandras  <dsandras@gnome.org>

	* src/sipendpoint.cpp: Slight change due to API change in OPAL.

2004-12-14  Damien Sandras  <dsandras@gnome.org>

	* src/sipendpoint.cpp, src/sipendpoint.h: Adapted to the new OPAL API
	supporting error codes for registration/unregistration.

	* src/sipregistrar.cpp: Do an asynchronous unregistration.

2004-12-13  Damien Sandras  <dsandras@gnome.org>

	* src/pref_window.cpp: Moved things around.

2004-12-13  Damien Sandras  <dsandras@gnome.org>

	* src/sipendpoint.cpp, src/sipregistrar.cpp: Fixes related to my last
	OPAL changes.

2004-12-09  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Fixed version.

2004-12-09  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Added notifiers triggered when an outbound proxy
	parameter changes.

	* src/endpoint.cpp, src/pcssendpoint.cpp, src/sipendpoint.cpp, 
	src/sipendpoint.h, src/sipregistrar.cpp: Various changes permitted
	thanks to my changes to OPAL dealing with various problems. Not very
	descriptive, I know, but it's late.

2004-12-09  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Added back support to display the remote
	application name, the remote user and the remote URL thanks to my
	changes to OPAL.

	* src/sipendpoint.cpp, src/sipendpoint.h: Fixed RTP stats callback
	which was awaiting an H.323 connection.

2004-12-08  Damien Sandras  <dsandras@gnome.org>
