@@ -38,6 +38,7 @@
 #include "../config.h"
 
 #include "gnomemeeting.h"
+#include "pcssendpoint.h"
 #include "callbacks.h"
 #include "sound_handling.h"
 #include "ils.h"
@@ -150,12 +151,16 @@ GnomeMeeting::~GnomeMeeting()
 void 
 GnomeMeeting::Connect (PString url)
 {
+  GMPCSSEndPoint *pcssEP = NULL;
+
+  pcssEP = endpoint->GetPCSSEndPoint ();
+  
   /* If incoming connection, then answer it */
   if (endpoint->GetCallingState () == GMEndPoint::Called) {
 
     gm_history_window_insert (history_window, _("Answering incoming call"));
 
-    url_handler = new GMURLHandler (FALSE);
+    pcssEP->AcceptCurrentIncomingCall ();
   }
   else if (endpoint->GetCallingState () == GMEndPoint::Standby
 	   && !GMURL (url).IsEmpty ()) {
@@ -197,7 +202,7 @@ GnomeMeeting::Disconnect (H323Connection::CallEndReason reason)
       gm_history_window_insert (history_window, _("Refusing Incoming call"));
 
       endpoint->ClearCall (call_token,
-			   H323Connection::EndedByLocalUser);
+			   H323Connection::EndedByAnswerDenied);
     }
   }
 }
