@@ -1,3 +1,8 @@
+2004-12-20  Damien Sandras  <dsandras@gnome.org>
+
+	* src/gnomemeeting.cpp, src/urlhandler.cpp: Do not answer incoming
+	calls in a separate thread.
+
 2004-12-19  Damien Sandras  <dsandras@gnome.org>
 
 	* src/config.cpp: Temporarily commented out check for forwarding host 
